Prod-EU/force-app/main/default/objects/CRM_OrderItemStatus_Event_Out__e/CRM_OrderItemStatus_Event_Out__e.object-meta.xml
<CustomObject>
    <description>Platform event published from Salesforce for OrderItem updates, which will be consumed by Kafka</description>
    <label>CRM OrderItemStatus Event - Out</label>
    <pluralLabel>CRM OrderItemStatus Events - Out</pluralLabel>
</CustomObject>