Prod-EU/force-app/main/default/objects/CRM_OrderItemStatus_Event_Out__e/fields/changedQuantity__c.field-meta.xml
<CustomField>
    <fullName>changedQuantity__c</fullName>
    <label>changedQuantity</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>