Prod-EU/force-app/main/default/objects/CRM_OrderItemStatus_Event_Out__e/fields/deliveryNumber__c.field-meta.xml
<CustomField>
    <fullName>deliveryNumber__c</fullName>
    <label>deliveryNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>