Prod-EU/force-app/main/default/objects/CRM_OrderItemStatus_Event_Out__e/fields/isBundle__c.field-meta.xml
<CustomField>
    <fullName>isBundle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBundle</label>
    <type>Checkbox</type>
</CustomField>