Prod-EU/force-app/main/default/objects/CRM_OrderItemStatus_Event_Out__e/fields/isBundleItem__c.field-meta.xml
<CustomField>
    <fullName>isBundleItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBundleItem</label>
    <type>Checkbox</type>
</CustomField>