Prod-EU/force-app/main/default/objects/CRM_OrderItemStatus_Event_Out__e/fields/itemID__c.field-meta.xml
<CustomField>
    <fullName>itemID__c</fullName>
    <label>itemID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>