Prod-EU/force-app/main/default/objects/CRM_OrderItemStatus_Event_Out__e/fields/lotExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>lotExpirationDate__c</fullName>
    <label>lotExpirationDate</label>
    <length>30</length>
    <type>Text</type>
</CustomField>