Prod-EU/force-app/main/default/objects/CRM_OrderItemStatus_Event_Out__e/fields/lotNumbers__c.field-meta.xml
<CustomField>
    <fullName>lotNumbers__c</fullName>
    <label>lotNumbers</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>