Prod-EU/force-app/main/default/objects/CRM_OrderItemStatus_Event_Out__e/fields/quantity__c.field-meta.xml
<CustomField>
    <fullName>quantity__c</fullName>
    <label>quantity</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>