Prod-EU/force-app/main/default/objects/CRM_OrderItemStatus_Event_Out__e/fields/serialNumbers__c.field-meta.xml
<CustomField>
    <fullName>serialNumbers__c</fullName>
    <label>serialNumbers</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>