Prod-EU/force-app/main/default/objects/CRM_OrderItemStatus_Event_Out__e/fields/shippedDate__c.field-meta.xml
<CustomField>
    <fullName>shippedDate__c</fullName>
    <label>shippedDate</label>
    <length>30</length>
    <type>Text</type>
</CustomField>