Prod-EU/force-app/main/default/objects/CRM_OrderItemStatus_Event_Out__e/fields/sku__c.field-meta.xml
<CustomField>
    <fullName>sku__c</fullName>
    <label>sku</label>
    <length>30</length>
    <type>Text</type>
</CustomField>