Prod-EU/force-app/main/default/objects/CRM_OrderItemStatus_Event_Out__e/fields/skuBundle__c.field-meta.xml
<CustomField>
    <fullName>skuBundle__c</fullName>
    <label>skuBundle</label>
    <length>30</length>
    <type>Text</type>
</CustomField>