Prod-EU/force-app/main/default/objects/CRM_OrderItemStatus_Event_Out__e/fields/trackingNumber__c.field-meta.xml
<CustomField>
    <fullName>trackingNumber__c</fullName>
    <label>trackingNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>